crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__alternations_captured.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = [(identifier) (number)] @value
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "value"
S2 "Test"
S3 "identifier"
S4 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { value }

[type_members]
M0: S1 → T0  ; value: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 1 :: T1

[transitions]
  0   ε                                     ◼

Test:
  1   ε                                     2
  2   ε                                     5, 7
  4                                         ▶
  5       (identifier) [Node Set(M0)]       4
  7       (number) [Node Set(M0)]           4
