crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__alternations_captured_tagged.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = [A: (identifier) @a  B: (number) @b] @item
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "A"
S4 "B"
S5 "item"
S6 "Test"
S7 "identifier"
S8 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { a }
T2 = Struct  M1:1  ; { b }
T3 = Enum    M2:2  ; A | B
T4 = Struct  M4:1  ; { item }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T1  ; A: T1
M3: S4 → T2  ; B: T2
M4: S5 → T3  ; item: T3

[type_names]
N0: S6 → T4  ; Test

[entrypoints]
Test = 01 :: T4

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   ε                                    13, 19
  06                                        ▶
  07   ε   [EndObj]                         06
  09   ε   [EndEnum Set(M4)]                07
  11       (identifier) [Node Set(M0)]      09
  13   ε   [Enum(M2)]                       11
  15   ε   [EndEnum Set(M4)]                07
  17       (number) [Node Set(M1)]          15
  19   ε   [Enum(M3)]                       17
