crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__alternations_in_quantifier.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (object { [A: (pair) @a  B: (shorthand_property_identifier) @b] @item }* @items)
---
[flags]
linked = false

[strings]
S00 "Beauty will save the world"
S01 "a"
S02 "b"
S03 "A"
S04 "B"
S05 "item"
S06 "items"
S07 "Test"
S08 "object"
S09 "pair"
S10 "shorthand_property_identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { a }
T2 = Struct  M1:1  ; { b }
T3 = Enum    M2:2  ; A | B
T4 = Struct  M4:1  ; { item }
T5 = ArrayStar(T4)  ; T4*
T6 = Struct  M5:1  ; { items }

[type_members]
M0: S01 → T0  ; a: <Node>
M1: S02 → T0  ; b: <Node>
M2: S03 → T1  ; A: T1
M3: S04 → T2  ; B: T2
M4: S05 → T3  ; item: T3
M5: S06 → T5  ; items: T5

[type_names]
N0: S07 → T6  ; Test

[entrypoints]
Test = 01 :: T6

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   !   (object)                         05
  05   ε   [Arr]                            07
  07   ε                                    42, 19
  09   ε   [EndArr Set(M5)]                 11
  11   △                                    17
  12   ε   [EndObj Push]                    14
  14   ε                                    48, 09
  16                                        ▶
  17   ε   [EndObj]                         16
  19   ε   [EndArr Set(M5)]                 17
  21   ε   [EndEnum Set(M4)]                12
  23   !   (pair) [Node Set(M0)]            21
  25   ε   [Enum(M2)]                       23
  27   ε   [EndEnum Set(M4)]                12
  29   !   (shorthand_property_identifier) [Node Set(M1)]  27
  31   ε   [Enum(M3)]                       29
  33   ε                                    25, 31
  35   ε   [Obj]                            33
  37   ▷                                    40
  38   ε                                    37, 19
  40   ε                                    35, 38
  42   ▽                                    40
  43   ▷                                    46
  44   ε                                    43, 09
  46   ε                                    35, 44
  48   ▷                                    46
