crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__alternations_no_internal_captures.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (program [(identifier) (number)] @x)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "x"
S2 "Test"
S3 "program"
S4 "identifier"
S5 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { x }

[type_members]
M0: S1 → T0  ; x: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04  !!!  (program)                        05
  05   ε                                    10, 12
  07                                        ▶
  08   ε   [EndObj]                         07
  10 !!▽   (identifier) [Node Set(M0)]      14
  12 !!▽   (number) [Node Set(M0)]          14
  14   △                                    08
