crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__alternations_null_injection.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = [(identifier) @x (number) @y]
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "x"
S2 "y"
S3 "Test"
S4 "identifier"
S5 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { x, y }
T2 = Struct  M2:1  ; { x }
T3 = Struct  M3:1  ; { y }
T4 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T4  ; x: T4
M1: S2 → T4  ; y: T4
M2: S1 → T0  ; x: <Node>
M3: S2 → T0  ; y: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε                                    07, 11
  04                                        ▶
  05       (identifier) [Node Set(M0)]      04
  07   ε   [Null Set(M1)]                   05
  09       (number) [Node Set(M1)]          04
  11   ε   [Null Set(M0)]                   09
