crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__alternations_tagged_with_definition_ref.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Inner = (identifier) @name
Test = [A: (Inner)  B: (number) @b] @item
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "b"
S3 "A"
S4 "B"
S5 "item"
S6 "Inner"
S7 "Test"
S8 "identifier"
S9 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }
T2 = Struct  M1:1  ; { b }
T3 = Enum    M2:2  ; A | B
T4 = Struct  M4:1  ; { item }

[type_members]
M0: S1 → T0  ; name: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T1  ; A: Inner
M3: S4 → T2  ; B: T2
M4: S5 → T3  ; item: T3

[type_names]
N0: S6 → T1  ; Inner
N1: S7 → T4  ; Test

[entrypoints]
Inner = 06 :: T1
Test  = 10 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Inner:
  06   ε                                    07
  07   !   (identifier) [Node Set(M0)]      09
  09                                        ▶

Test:
  10   ε                                    11
  11   ε                                    23, 25
  13                                        ▶
  14   ε   [Set(M4)]                        13
  16   ε   [EndEnum]                        14
  18   ε   [EndObj]                         16
  20   !   (Inner)                          06 : 18
  21   ε   [Obj]                            20
  23   ε   [Enum(M2)]                       21
  25   !   [Enum(M3)] (number) [Node Set(M1) EndEnum]  14
