crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__alternations_unlabeled.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = [(identifier) @id (string) @str]
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "str"
S3 "Test"
S4 "identifier"
S5 "string"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { id, str }
T2 = Struct  M2:1  ; { id }
T3 = Struct  M3:1  ; { str }
T4 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T4  ; id: T4
M1: S2 → T4  ; str: T4
M2: S1 → T0  ; id: <Node>
M3: S2 → T0  ; str: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   ε                                    11, 15
  06                                        ▶
  07   ε   [EndObj]                         06
  09   !   (identifier) [Node Set(M0)]      07
  11   ε   [Null Set(M1)]                   09
  13   !   (string) [Node Set(M1)]          07
  15   ε   [Null Set(M0)]                   13
